--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,10 @@
 RewriteEngine On
 
-# Redirigir URLs con .html a versión limpia
-RewriteCond %{THE_REQUEST} \s/+(.+)\.html [NC]
+# 1. Redirigir .html a URL limpia (301)
+RewriteCond %{THE_REQUEST} \s/([^\s]+)\.html [NC]
 RewriteRule ^ %1 [R=301,L]
 
-# Servir archivos .html cuando no se especifica extensión
+# 2. Servir archivos .html cuando no se especifica extensión
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^([^/]+)/?$ $1.html [L]
+
