--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,9 @@
 RewriteEngine On
+
+# Redirigir URLs con .html a versión limpia
+RewriteCond %{THE_REQUEST} \s/+(.+)\.html [NC]
+RewriteRule ^ %1 [R=301,L]
+
+# Servir archivos .html cuando no se especifica extensión
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^([^/]+)/?$ $1.html [L]
