--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,16 @@
 RewriteEngine On
+RewriteBase /
 
-# Redirigir URLs con .html a versión limpia
+# 1. Forzar HTTPS y WWW (Todo en un solo paso para mayor velocidad)
+RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule ^(.*)$ https://www.devdomainmasters.com/$1 [L,R=301]
+
+# 2. Redirigir URLs con .html a la versión limpia (SEO friendly)
 RewriteCond %{THE_REQUEST} \s/+(.+)\.html [NC]
-RewriteRule ^ %1 [R=301,L]
+RewriteRule ^(.+)\.html$ /$1 [R=301,L,NE]
 
-# Servir archivos .html cuando no se especifica extensión
+# 3. Mapeo interno: Servir el .html sin mostrar la extensión
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^([^/]+)/?$ $1.html [L]
