--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,19 @@
 RewriteEngine On
 RewriteBase /
 
-# 1. Forzar HTTPS y WWW (Todo en un solo paso para mayor velocidad)
-RewriteCond %{HTTPS} off [OR]
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ https://www.devdomainmasters.com/$1 [L,R=301]
+# 1. Forzar HTTPS (Método estándar compatible con la mayoría de hostings)
+RewriteCond %{HTTPS} off
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# 2. Redirigir URLs con .html a la versión limpia (SEO friendly)
+# 2. Forzar WWW (Solo si no la tiene ya)
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule ^ https://www.devdomainmasters.com%{REQUEST_URI} [L,R=301]
+
+# 3. Eliminar .html de la URL (Redirección externa)
 RewriteCond %{THE_REQUEST} \s/+(.+)\.html [NC]
 RewriteRule ^(.+)\.html$ /$1 [R=301,L,NE]
 
-# 3. Mapeo interno: Servir el .html sin mostrar la extensión
+# 4. Servir el archivo .html (Mapeo interno)
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^([^/]+)/?$ $1.html [L]
