--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,15 @@
+# Desactivar MultiViews para que el servidor no se adelante a nuestras reglas
+Options -MultiViews
+
 RewriteEngine On
 RewriteBase /
 
-# 1. Si el usuario pide algo.html, quitarle el .html visualmente
+# 1. Redirigir de .html a versión limpia (Solo si el usuario escribe .html)
 RewriteCond %{THE_REQUEST} \s/+(.+)\.html [NC]
 RewriteRule ^(.+)\.html$ /$1 [R=301,L]
 
-# 2. Si el usuario pide la ruta limpia, mostrarle el archivo .html internamente
+# 2. Mapeo interno (Para que /hosting cargue hosting.html sin cambiar la URL)
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^([^/]+)/?$ $1.html [L]
